# CrewAIWithOllama

./: .env.example  README.md  agents.py  main.py  pyproject.toml  tasks.py
