[tool.poetry]
name = "crewai-with-ollama"
version = "0.1.0"
description = "A CreAI project with Ollama local LLM"
authors = ["Luiz Carlos Kazuyuki Fukaya <luizcarloskazuyukifukaya@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
#crewai = "^0.67.1"
crewai = ">=0.67.1"
openai = "^1.51.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
